Version 0.4.12
--------------
New feature: Added 1-click NZB download for fanzub.com
Bugfix: fixing 1-click for nzbclub.com
Bugfix: Missing 1-click downloads on binsearch.info Watchlist

Version 0.4.11
--------------
Bugfix: Now working in Chrome 12 (dev)

Version 0.4.10
--------------
New feature: Added 1-click NZB download for nzb.su (Newznab).
  Note: SABconnect++ won't send a category when using cover view. This is because those views don't display the categories.

Version 0.4.9
-------------
Improvement: Timeout for notifications (to disappear) is now configurable. Default is to keep them open indefinitely.
Improvement: Allow you to use the X-DNZB-Category HTTP header on sites that supports it (nzbs.org, Newzbin), instead of using the default auto-categorization. The X-DNZB-Category header will only contain the main category (eg. 'TV'), versus auto-categorization that will contain the full category name (eg. TV.x264) http://code.google.com/p/sabconnectplusplus/issues/detail?id=18
Improvement: Added individual 1-click NZB download buttons to nzbindex.com http://code.google.com/p/sabconnectplusplus/issues/detail?id=20
Improvement: Added option to use the NZB file name, instead of the full name displayed on the website, for nzbindex.com and binsearch.info http://code.google.com/p/sabconnectplusplus/issues/detail?id=20
Bugfix: Show 'Download Failed' notifications instead of 'Download Complete' when appropriate.

Version 0.4.8
-------------
New feature: "Download Complete" desktop notifications
New feature: "Hard-coded category" & "Default category" options, to override NZB index site categories, or send a default when no category is found on the NZB index site.
Bugfix: nzbs.org auto-categorization didn't work on homepage (Browse All NZBs)
Bugfix: NZBXXX.com 1-click NZB download was not working; added Username & API Key options in the extension options to fix. http://code.google.com/p/sabconnectplusplus/issues/detail?id=12