@@ -1,8 +1,10 @@
 Version 0.4.12
 --------------
 New feature: Added 1-click NZB download for fanzub.com
+Improvement: Allow 1, 2 or 4 hours refresh rates, or disabling background refresh altogether
 Bugfix: fixing 1-click for nzbclub.com
 Bugfix: Missing 1-click downloads on binsearch.info Watchlist
+Bugfix: AJAX search results on nzbsrus.com didn't show the 1-click SAB icons
 
 Version 0.4.11
 --------------
